--- a/buildspec.yaml
+++ b/buildspec.yaml
@@ -6,8 +6,8 @@ phases:
       - aws ecr get-login-password --region ap-south-1 | docker login --username AWS --password-stdin 339713023613.dkr.ecr.ap-southeast-1.amazonaws.com
   build:
     commands:
-      - docker build -t ai .
-      - docker tag ai:latest 339713023613.dkr.ecr.ap-southeast-1.amazonaws.com/ijse_ai:latest
+      - docker build -t ijse_ai .
+      - docker tag ijse_ai:latest 339713023613.dkr.ecr.ap-southeast-1.amazonaws.com/ijse_ai:latest
   post_build:
     commands:
       - docker push 339713023613.dkr.ecr.ap-southeast-1.amazonaws.com/ijse_ai:latest
