--- a/buildspec.yaml
+++ b/buildspec.yaml
@@ -3,7 +3,7 @@ version: 0.2
 phases:
   pre_build:
     commands:
-      - aws ecr get-login-password --region ap-south-1 | docker login --username AWS --password-stdin 339713023613.dkr.ecr.ap-southeast-1.amazonaws.com
+      - aws ecr get-login-password --region ap-southeast-1 | docker login --username AWS --password-stdin 339713023613.dkr.ecr.ap-southeast-1.amazonaws.com
   build:
     commands:
       - docker build -t ijse_ai .
@@ -12,6 +12,6 @@ phases:
     commands:
       - docker push 339713023613.dkr.ecr.ap-southeast-1.amazonaws.com/ijse_ai:latest
       - echo Writing image definitions file...
-      - printf '[{"name":"mywebsite","imageUri":"%s"}]' $REPOSITORY_URI:latest > imagedefinitions.json
+      - printf '[{"name":"mywebsite","imageUri":"%s"}]' 339713023613.dkr.ecr.ap-southeast-1.amazonaws.com/ijse_ai:latest > imagedefinitions.json
 artifacts:
   files: imagedefinitions.json
